--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
         <div class="movies-container">
           <h1 class="movies__heading">NETFLIX ORIGINALS</h1>
           <div class="movies__container--movie__netflix" id='tvShowNetflix'>
-            <img
-              src="https://image.tmdb.org/t/p/original//MoEKaPFHABtA1xKoOteirGaHl1.jpg"
-              class="movies__container--movie-image"
-            />
+          <!-- RENDER SERIES VIA tvShowNetflixRender.mjs -->
           </div>
 
           <div class="movies-container">
