--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Netflix</title>
+    <link rel="icon" type="image/png" href="./img/favico.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -35,16 +36,11 @@
         <div class="movies-container">
           <h1 class="movies__heading">NETFLIX ORIGINALS</h1>
           <div class="movies__container--movie__netflix" id='tvShowNetflix'>
-          <!-- RENDER SERIES VIA tvShowNetflixRender.mjs -->
           </div>
-
+        </div>
           <div class="movies-container">
             <h1 class="movies__heading">Trending Now</h1>
-            <div class="movies__container--movie">
-              <img
-                src="https://image.tmdb.org/t/p/w500//xGexTKCJDkl12dTW4YCBDXWb1AD.jpg"
-                class="movies__container--movie-image"
-              />
+            <div class="movies__container--movie" id='trendingNow'>
             </div>
           </div>
 
