--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <div class="movies-container">
             <h1 class="movies__heading">Top Rated</h1>
-            <div class="movies__container--movie">
+            <div class="movies__container--movie" id='ratedNow'>
               <img
                 src="https://image.tmdb.org/t/p/w500//xGexTKCJDkl12dTW4YCBDXWb1AD.jpg"
                 class="movies__container--movie-image"
@@ -83,7 +83,7 @@
               />
             </div>
           </div>
-        </div>
+        
       </div>
     </div>
 
