--- a/index.html
+++ b/index.html
@@ -47,20 +47,12 @@
           <div class="movies-container">
             <h1 class="movies__heading">Top Rated</h1>
             <div class="movies__container--movie" id='ratedNow'>
-              <img
-                src="https://image.tmdb.org/t/p/w500//xGexTKCJDkl12dTW4YCBDXWb1AD.jpg"
-                class="movies__container--movie-image"
-              />
             </div>
           </div>
 
           <div class="movies-container">
             <h1 class="movies__heading">Actions Movies</h1>
-            <div class="movies__container--movie">
-              <img
-                src="https://image.tmdb.org/t/p/w500//xGexTKCJDkl12dTW4YCBDXWb1AD.jpg"
-                class="movies__container--movie-image"
-              />
+            <div class="movies__container--movie" id="actionMovies">
             </div>
           </div>
 
