updating id on html for documentary/documentaries

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
           <div class="movies-container">
             <h1 class="movies__heading">Documentaries</h1>
-            <div class="movies__container--movie" id="documentaryMovies">
+            <div class="movies__container--movie" id="documentariesMovies">
             </div>
           </div>
         
