--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           <div class="movies-container">
             <h1 class="movies__heading">Comedies</h1>
-            <div class="movies__container--movie" id="comedyMovies">
+            <div class="movies__container--movie" id="comediesMovies">
             </div>
           </div>
 
