--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="movies">
         <div class="movies-container">
           <h1 class="movies__heading">NETFLIX ORIGINALS</h1>
-          <div class="movies__container--movie__netflix" id='tvShowNetflix'>
-          </div>
+          <div class="movies__container--movie__netflix" id='tvShowNetflix'></div>
+          <div id='container-modal'></div>
         </div>
           <div class="movies-container">
             <h1 class="movies__heading">Trending Now</h1>
