--- a/index.html
+++ b/index.html
@@ -36,30 +36,31 @@
         <div class="movies-container">
           <h1 class="movies__heading">NETFLIX ORIGINALS</h1>
           <div class="movies__container--movie__netflix" id='tvShowNetflix'></div>
-          <div id='container-modal'></div>
+          <div id='container-modal-netflix'></div>
         </div>
           <div class="movies-container">
             <h1 class="movies__heading">Trending Now</h1>
             <div class="movies__container--movie" id='trendingNow'>
             </div>
+            <div id='container-modal-trendings'></div>
           </div>
 
           <div class="movies-container">
             <h1 class="movies__heading">Top Rated</h1>
-            <div class="movies__container--movie" id='ratedNow'>
-            </div>
+            <div class="movies__container--movie" id='ratedNow'></div>
+            <div id='container-modal-ratedNow'></div>
           </div>
 
           <div class="movies-container">
             <h1 class="movies__heading">Actions Movies</h1>
-            <div class="movies__container--movie" id="actionMovies">
-            </div>
+            <div class="movies__container--movie" id="actionMovies"></div>
+            <div id='container-modal-actionMovies'></div>
           </div>
 
           <div class="movies-container">
             <h1 class="movies__heading">Comedies</h1>
-            <div class="movies__container--movie" id="comediesMovies">
-            </div>
+            <div class="movies__container--movie" id="comediesMovies"></div>
+            <div id='container-modal-comediesMovies'></div>
           </div>
 
           <div class="movies-container">
