--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
           <div class="movies-container">
             <h1 class="movies__heading">Documentaries</h1>
             <div class="movies__container--movie" id="documentariesMovies">
+              
             </div>
+            <div id='container-modal-documentariesMovies'></div>
           </div>
         
       </div>
