create a crossdiv for quit modal

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
 
           <div class="movies-container">
             <h1 class="movies__heading">Documentaries</h1>
-            <div class="movies__container--movie" id="documentariesMovies">
-              
-            </div>
+            <div class="movies__container--movie" id="documentariesMovies"></div>
             <div id='container-modal-documentariesMovies'></div>
           </div>
         
