--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </svg>
           <input id='inputSearch'class="navigation__container--left__input" type="text" placeholder="Title, genres, people" />
         </div>
-        <div class="navigation__container-link link">Login</div>
+        <div id='buttonLogin' class="navigation__container-link link">Login</div>
         <div class="navigation__container-link link">Register</div>
       </ul>
     </nav>
