--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navigation">
       <ul class="navigation__container">
         <a class="navigation__container-link active" aria-current="page" href="#">
-          <img class="navigation__container--logo" src="./img/netflix.png" alt="" />
+          <a href='./index.html'><img class="navigation__container--logo" src="./img/netflix.png" alt="" /></a>
         </a>
         <div class="navigation__container-link link">Home</div>
         <div class="navigation__container-link link">TV Shows</div>
@@ -25,8 +25,8 @@
           </svg>
           <input id='inputSearch'class="navigation__container--left__input" type="text" placeholder="Title, genres, people" />
         </div>
-        <div id='buttonLogin' class="navigation__container-link link">Login</div>
-        <div class="navigation__container-link link">Register</div>
+        <div class="navigation__container-link link">Login</div>
+        <div id='buttonLogin' class="navigation__container-link link">Register</div>
       </ul>
     </nav>
     <div class="container">
